--- a/src/pages/login/Login.scss
+++ b/src/pages/login/Login.scss
@@ -201,6 +201,7 @@ $bg-image: "../../images/chairs.jpg";
   background-color: #ffffff;
   padding: 20px;
   border-radius: 0.25rem;
+  max-width: 500px !important;
 }
 
 /* Fallback for Edge
